collapse show hide

--- a/foo.html
+++ b/foo.html
@@ -36,6 +36,10 @@
             </div>
         </div>
 
+        <br>
+        <button type="button" class="btn-warning"><a href="./index.html">HOME</a></button>
+
+
         <script src="./script.js"></script>
     </body>
 </html>
