--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
             <h2>
                 <a href="./foo.html">Foo</a>
             </h2>
+            <h2>
+                <a href="./foo2.html">Foo 2</a>
+            </h2>
         </div>
-
+        
         <script src="./script.js"></script>
     </body>
 </html>
