--- a/foo2.html
+++ b/foo2.html
@@ -10,7 +10,6 @@
         <!--JQuery CDN-->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-        
         <!--Boostrap CSS CDN-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -19,7 +18,7 @@
 
     </head>
     <body>
-
+<!--IPAD 1080x810-->
         <div id="app">
             <div id="accordion">
                 <div class="card">
@@ -98,22 +97,6 @@
             </div>
         </div>
         
-        <p>
-            <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
-                aria-controls="collapseExample">
-                Link with href
-            </a>
-            <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-                aria-expanded="false" aria-controls="collapseExample">
-                Button with data-bs-target
-            </button>
-        </p>
-        <div class="collapse" id="collapseExample">
-            <div class="card card-body">
-                Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user
-                activates the relevant trigger.
-            </div>
-        </div>
         <br>
         <button type="button" class="btn-warning"><a href="./index.html">HOME</a></button>
 
