--- a/foo2.html
+++ b/foo2.html
@@ -34,7 +34,10 @@
                     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-bs-toggle="#accordion">
                         <div class="card-body">
                             <img src="./img/campus2.jpg" alt="campus">
-                            é un corso di laurea multidisciplinare
+                            <p>
+                                ICT (Innovazione sociale, comunicazione e nuove tecnologie) è un corso di laurea multidisciplinare nato dalla
+                                collaborazione di 4 Dipartimenti di Unito.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -50,7 +53,10 @@
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-bs-toggle="#accordion">
                         <div class="card-body">
                             <img src="./img/lezione.jpg" alt="campus">
-                            profili professionali interessanti per le imprese. profili misti e capaci di sviluppare tecnologie informatiche
+                            <p>
+                                Ciò che distingue ICT dagli altri corsi è la sua multidisciplinarietà. Gli studenti non avranno solamente una
+                                buona base informatica, ma anche un’ampia visione sugli aspetti in ambito socio-economico e giurisprudenziale.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -66,7 +72,12 @@
                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-bs-toggle="#accordion">
                         <div class="card-body">
                             <img src="./img/innovazione.jpg" alt="campus">
-                            bla bla bla
+                            <p>
+                                ICT è in grado di formare profili capaci di sviluppare tecnologie informatiche che soddisfino i bisogni degli utenti e
+                                dei mercati in ottica inclusiva e trasversale. In particolare potrai specializzarti come:
+                                Profilo informatico
+                                Profilo socio-economico
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -83,7 +94,11 @@
                     <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-bs-toggle="#accordion">
                         <div class="card-body">
                             <img src="./img/materie-caratterizzanti.png" alt="campus">
-                            bla bla bla
+                            <p>
+                                Le quattro materie caratterizzanti sono: Economia, Diritto, Informatica, Sociologia.
+                                Oltre agli esami obbligatori, il terzo anno ci sono degli esami a scelta specializzati in base ai propri interessi.
+                                Completeranno il tuo percorso: esami di lingua, laboratori pratici e tirocini.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -100,7 +115,10 @@
                     <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-bs-toggle="#accordion">
                         <div class="card-body">
                             <img src="./img/profili-professionali.jpg" alt="campus">
-                            bla bla bla
+                            <p>
+                                Gli sbocchi lavorativi di ICT sono svariati. Dallo sviluppo di web/app design ai servizi commerciali e marketing online.
+                                Dalle azione informatiche a quelle di comunicazione.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -117,7 +135,10 @@
                     <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-bs-toggle="#accordion">
                         <div class="card-body">
                             <img src="./img/mappa-google-1.png" alt="campus">
-                            bla bla bla
+                            <p>
+                                ICT è un Corso di Laurea ad Accesso Libero. Le lezioni si svolgono nelle aule del Campus Einaudi di Torino, alcuni corsi
+                                (specialmente laboratori e lingue) richiedono la presenza obbligatoria.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -140,6 +161,10 @@
 
                 
             </div>
+        </div>
+
+        <div class="d-flex justify-content-center">
+            <img src="./img/logo.png" alt="logo ICT" id="img-footer">
         </div>
 
         
