card header style + footer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div id="accordion">
                 <div class="card">
                     <div class="card-header" id="headingOne">
-                        <h5 class="mb-0">
+                        <h5 class="mb-0 text-start">
                             <button type="button" class="btn btn-link collapsed" data-bs-toggle="collapse"
                                 data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                                 ICT: Innovazione Sociale, Comunicazione e Nuove Tecnologie
@@ -163,12 +163,13 @@
             </div>
         </div>
 
-        <div class="d-flex justify-content-center">
-            <img src="./img/logo.png" alt="logo ICT" id="img-footer">
+        <div class="footer d-flex justify-content-center flex-column">
+            <img src="./img/logo.png" alt="logo ICT">
+            <span>Università degli Studi di Torino</span>
+            <span>Via Verdi, 8 - 10124 Torino</span>
         </div>
 
-        
-        <script src="./script2.js"></script>
+
         <!--separate popper and bootstrap js-->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
             integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
