--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
                     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-bs-toggle="#accordion">
                         <div class="card-body">
-                            <img src="./img/campus2.jpg" alt="campus">
+                            <img class="img-card" src="./img/campus2.jpg" alt="Campus Luigi Einaudi dall'alto">
                             <p>
                                 ICT (Innovazione sociale, comunicazione e nuove tecnologie) è un corso di laurea multidisciplinare nato dalla
                                 collaborazione di 4 Dipartimenti di Unito.
@@ -52,7 +52,7 @@
                     </div>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-bs-toggle="#accordion">
                         <div class="card-body">
-                            <img src="./img/aulamagna.jpeg" alt="campus">
+                            <img class="img-card" src="./img/aulamagna.jpeg" alt="Aula Magna">
                             <p>
                                 Ciò che distingue ICT dagli altri corsi è la sua multidisciplinarietà. Gli studenti non avranno solamente una
                                 buona base informatica, ma anche un’ampia visione sugli aspetti in ambito socio-economico e giurisprudenziale.
@@ -71,7 +71,7 @@
                     </div>
                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-bs-toggle="#accordion">
                         <div class="card-body">
-                            <img src="./img/profili.jpeg" alt="campus">
+                            <img class="img-card" src="./img/profili.jpeg" alt="Percorso Formativo">
                             <p>
                                 ICT è in grado di formare profili capaci di sviluppare tecnologie informatiche che soddisfino i bisogni degli utenti e
                                 dei mercati in ottica inclusiva e trasversale. In particolare potrai specializzarti come:
@@ -93,7 +93,7 @@
                     </div>
                     <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-bs-toggle="#accordion">
                         <div class="card-body">
-                            <img src="./img/materie.jpeg" alt="campus">
+                            <img class="img-card" src="./img/materie.jpeg" alt="Materie caratterizzanti">
                             <p>
                                 Le quattro materie caratterizzanti sono: Economia, Diritto, Informatica, Sociologia.
                                 Oltre agli esami obbligatori, il terzo anno ci sono degli esami a scelta specializzati in base ai propri interessi.
@@ -114,7 +114,7 @@
                     </div>
                     <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-bs-toggle="#accordion">
                         <div class="card-body">
-                            <img src="./img/profili-professionali.jpg" alt="campus">
+                            <img class="img-card" src="./img/profili-professionali.jpg" alt="Sbocchi professionali">
                             <p>
                                 Gli sbocchi lavorativi di ICT sono svariati. Dallo sviluppo di web/app design ai servizi commerciali e marketing online.
                                 Dalle azione informatiche a quelle di comunicazione.
@@ -134,7 +134,7 @@
                     </div>
                     <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-bs-toggle="#accordion">
                         <div class="card-body">
-                            <img src="./img/mappa-google-1.png" alt="campus">
+                            <img class="img-card" src="./img/mappa-google-1.png" alt="Mappa Campus Luigi Einaudi">
                             <p>
                                 ICT è un Corso di Laurea ad Accesso Libero. Le lezioni si svolgono nelle aule del Campus Einaudi di Torino, alcuni corsi
                                 (specialmente laboratori e lingue) richiedono la presenza obbligatoria.
@@ -153,8 +153,13 @@
                         </h5>
                     </div>
                     <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-bs-toggle="#accordion">
-                        <div class="card-body">
-                            <img src="./img/contatti.png" alt="campus">
+                        <div class="card-body d-flex flex-column ps-5">
+                            <br>
+                            <a href="https://www.ict.unito.it" target="_blank" class="link-logos"><img src="./img/logoICT.png" alt="ICT link sito ufficiale" width="40" height="40" class="img-logos">Web: ict.unito.it</a><br>
+                            <a href="https://www.instagram.com/ict_unito_official/" target="_blank" class="link-logos"><img src="./img/instagram.png" alt="Instagram link" width="40" height="40" class="img-logos">Instagram: ict_unito_official</a><br>
+                            <a href="https://www.facebook.com/ICTUNITO/" target="_blank" class="link-logos"><img src="./img/facebook.png" alt="Facebook link" width="40" height="40" class="img-logos">Facebook: ICT Unito</a><br>
+                            <a href="https://www.linkedin.com/company/ict-unito/" target="_blank" class="link-logos"><img src="./img/linkedin.png" alt="Linkedin link" width="40" height="40" class="img-logos">Linkedin: ICT - Unito</a><br>
+                            <a href="https://www.youtube.com/channel/UCaEcvwZsN9YI5HZwlnZDGmw" target="_blank" class="link-logos"><img src="./img/youtube.png" alt="Youtube link" width="40" height="30" class="img-logos">Youtube: #ICTUnito</a><br>
                             </div>
                     </div>
                 </div>
@@ -164,7 +169,7 @@
         </div>
 
         <div class="footer d-flex justify-content-center flex-column">
-            <img src="./img/logo.png" alt="logo ICT">
+            <img class="img-card" src="./img/logo.png" alt="logo ICT">
             <span>Università degli Studi di Torino</span>
             <span>Via Verdi, 8 - 10124 Torino</span>
         </div>
