--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="card-header" id="headingSix">
                         <h5 class="mb-0">
                             <button type="button" class="btn btn-link collapsed" data-bs-toggle="collapse"
-                                data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix" id="Five">
+                                data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix" id="Six">
                                 Il Campus
                             </button>
                         </h5>
